--- a/ui/moviestrip.reel/moviestrip.css
+++ b/ui/moviestrip.reel/moviestrip.css
@@ -29,6 +29,7 @@
     margin-left: -90px;
     margin-top: -130px;
     cursor: pointer;
+    background: #000;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
